# voicetwin

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  processor.py  utils.py
src/voicetwin/: __init__.py  cli.py  models.py  report.py
src/voicetwin/cloner/: encoder.py  synthesizer.py  vocoder.py
src/voicetwin/features/: mel.py  prosody.py  quality.py
tests/: test_benchmark.py  test_core.py  test_encoder.py  test_integration.py  test_mel.py  test_models.py  test_prosody.py  test_quality.py  test_report.py  test_synthesizer.py  test_vocoder.py
