[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voicetwin"
version = "0.1.0"
description = "AI Voice Cloning from 30-second samples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mukunda Katta" },
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
voicetwin = "voicetwin.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
